--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,12 @@
 site_name: NEORICALEX
 nav:
-    - README: README.md
+    - Home: 'index.md'
+    - 'User Guide':
+        - 'Writing your docs': 'writing-your-docs.md'
+        - 'Styling your docs': 'styling-your-docs.md'
+    - 'COPED':
+        - 'README': 'coped/README.md'
+    - Sobre:
+        - 'Licença': 'license.md'
+        - 'README': 'README.md'
 theme: readthedocs
