--- a/nfdos/.gitignore
+++ b/nfdos/.gitignore
@@ -1,4 +1,4 @@
-desktop/0.1/image/
-desktop/0.1/rootfs/
-desktop/0.1/nfdos.img
-desktop/0.1//nfdos.iso
+desktop/0.2/image/
+desktop/0.2/rootfs/
+desktop/0.2/nfdos.img
+desktop/0.2/nfdos.iso
